--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -20,3 +20,8 @@ default = []
 [dependencies]
 anchor-lang = "0.22.1"
 anchor-spl = "0.22.1"
+
+[dev-dependencies]
+solana-program-test = "1.10.0"
+solana-sdk = "1.10.0"
+spl-token = { version = "3.3.0", features = [ "no-entrypoint" ] }
