--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "3.1.6", features = [ "derive" ] }
+p2swap = { path = "../program", features = [ "no-entrypoint" ] }
+solana-client = "1.10.2"
+anchor-client = "0.22.1"
+solana-sdk = "1.10.2"
+solana-clap-utils = "1.10.2"
+spl-token = "3.2.0"
+chrono = "0.4.19"
