--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,3 +14,5 @@ solana-sdk = "1.10.2"
 solana-clap-utils = "1.10.2"
 spl-token = "3.2.0"
 chrono = "0.4.19"
+thiserror = "1.0.30"
+indicatif = "0.16.2"
