--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,3 +16,5 @@ spl-token = "3.2.0"
 chrono = "0.4.19"
 thiserror = "1.0.30"
 indicatif = "0.16.2"
+solana-account-decoder = "1.10.2"
+bs58 = "0.4.0"
